# cli-onprem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REFACTORING.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  refactoring-task.md
.github/workflows/: ci.yml  release.yml
docs/: README_KO.md  architecture.md  docker_tar.md  fatpack.md  greet.md  helm.md  pypi_ko.md  s3-share.md  scan.md
docs/architecture/: ERROR_HANDLING.md  SUBPROCESS_WRAPPER.md
scripts/: repush-docker.sh
src/cli_onprem/: __init__.py  __main__.py
src/cli_onprem/commands/: __init__.py  docker_tar.py  fatpack.py  greet.py  helm.py  helm_local.py  helm_local_args.py  s3_share.py  scan.py  tar_fat32.py
src/cli_onprem/core/: errors.py  logging.py  types.py
src/cli_onprem/libs/: __init__.py  autocomplete.py  cli_tools.py  config.py  console.py  errors.py  progress.py  subprocess.py
src/cli_onprem/services/: archive.py  docker.py  docker_args.py  helm.py  s3.py
src/cli_onprem/utils/: file.py  formatting.py  shell.py
tests/: conftest.py  test_archive_security.py  test_cache.py  test_docker_args.py  test_docker_error_parsing.py  test_docker_tar.py  test_docker_tar_extended.py  test_docker_tar_refactored.py  test_fatpack.py  test_greet.py  test_helm.py  test_helm_local.py  test_s3_share.py  test_s3_share_errors.py  test_s3_share_presign.py  test_s3_share_sync.py  test_scan.py  test_services_credential.py  test_services_s3.py  test_subprocess_timeout.py  test_tar_fat32.py  test_utils_shell.py  test_version.py
