[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-onprem"
version = "0.1.0"
description = "CLI tool for infrastructure engineers"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "kang hee yong", email = "cagojeiger89@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pre-commit-uv",
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pyupgrade",
    "build",
]

[project.scripts]
cli-onprem = "cli_onprem.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_onprem"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
